--- a/exampleSite/assets/sass/styles.scss
+++ b/exampleSite/assets/sass/styles.scss
@@ -1,7 +1,7 @@
 .home {
-    --bd-purple: #4c0bce;
-    --bd-violet: #712cf9;
-    --bd-accent: #ffe484;
+    --bd-purple: #ba654e;
+    --bd-violet: #EbC5B4;
+    --bd-accent: #e26a6a;
     --bd-violet-rgb: 112.520718,44.062154,249.437846;
     --bd-accent-rgb: 255,228,132;
     --bd-pink-rgb: 214,51,132;
@@ -18,12 +18,12 @@
         --bs-btn-border-color: var(--bd-violet);
         --bs-btn-border-radius: .5rem;
         --bs-btn-hover-color: var(--bs-white);
-        --bs-btn-hover-bg: #6528e0;
-        --bs-btn-hover-border-color: #6528e0;
+        --bs-btn-hover-bg: #e26a6a;
+        --bs-btn-hover-border-color: #e26a6a;
         --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
         --bs-btn-active-color: var(--bs-btn-hover-color);
-        --bs-btn-active-bg: #5a23c8;
-        --bs-btn-active-border-color: #5a23c8;
+        --bs-btn-active-bg: #e26a6a;
+        --bs-btn-active-border-color: #e26a6a;
     }
 }
 
@@ -39,7 +39,7 @@
 }
 
 .text-violet {
-    color: #6528e0;
+    color: #e26a6a;
 }
 
 .list {
