--- a/layouts/partials/footer/footer.html
+++ b/layouts/partials/footer/footer.html
@@ -1,9 +1,16 @@
 <footer class="py-3 mt-auto bg-light">
   <div class="container py-1 my-1">
     <div class="d-flex flex-wrap justify-content-between align-items-center">
-      <p class="col-md mb-0 text-muted">{{ .Site.Copyright | safeHTML }}</p>
+      <p class="col-md mb-0 text-muted"> © {{ now.Year }} | {{ .Site.Params.siteAuthor }}   
+        <a href="https://github.com/hanxi-guo" target="_blank" rel="noopener">
+          <svg class="feather" width="1em" height="1em">
+            <use href="{{ `images/feather/feather-sprite.svg#github` | relURL }}"/>
+          </svg>
+        </a>  
+         | {{ .Site.Copyright | safeHTML }}</p>
       <ul class="nav col-md-auto justify-content-end">
         {{ range .Site.Menus.footer -}}
+        
         <li class="nav-item"><a href="{{ .URL }}" class="nav-link px-2 text-muted"{{ with .Title }} title='{{ . }}' aria-label='{{ . }}'{{ end }}>{{ .Name }}</a></li>
         {{ end -}}
       </ul>
