--- a/layouts/partials/head/favicons.html
+++ b/layouts/partials/head/favicons.html
@@ -3,9 +3,9 @@
     Favicon for the modern web 🤟
     https://realfavicongenerator.net/svg-favicon/
 -->
-{{ if (os.FileExists "static/favicon.svg") -}}
-    <link rel="icon" type="image/svg+xml" href="{{ `favicon.svg` | absURL }}">
+{{ if (os.FileExists "static/images/title.svg") -}}
+    <link rel="icon" type="image/svg+xml" href="{{ `images/title.svg` | absURL }}">
 {{ end -}}
-{{ if (os.FileExists "static/favicon.png") -}}
-    <link rel="icon" type="image/png" href="{{ `favicon.png` | absURL }}">
+{{ if (os.FileExists "static/images/title.png") -}}
+    <link rel="icon" type="image/png" href="{{ `images/title.png` | absURL }}">
 {{ end -}}
